--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image" href="HinduSwastika.svg.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Products</title>
+    <title>API Shopy</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
