--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="nav-bar">
       <div class="lec"><img class="logo-img img" src="./HinduSwastika.svg.png" alt="HinduSwastika"> fTh</div>
-      <div class="lec">Shoping Cart</div>
+      <div class="lec">API Shopy</div>
       <div class="lec">Special Thanks <span>&#x2665;</span><a href="https://fakestoreapi.com/" target="_blank"><img class ="logo-img img"src="./image.png" alt="fakestoreapi"></a></div> 
       <div class="lec"><a href="https://github.com/fThAbhishek-Pandey/API--Shoping-Cart" target="_blank">Github Repo</a></div>
     </nav>
